test/cli/test/admission_user_info_deprecated/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod1
  labels:
    app: myapp1
spec: 
  containers:
  - name: nginx
    image: nginx:1.12

---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod2
  labels:
    app: myapp2
spec: 
  containers:
  - name: nginx
    image: nginx:1.12

---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod3
  labels:
    app: myapp3
spec: 
  containers:
  - name: nginx
    image: ngnix:1.12
