test/cli/test/admission_user_info_deprecated/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- disallow_latest_tag.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: disallow-latest-tag
  resources:
  - myapp-pod1
  - myapp-pod2
  - myapp-pod3
  result: pass
  rule: require-image-tag
- kind: Pod
  policy: disallow-latest-tag
  resources:
  - myapp-pod1
  - myapp-pod2
  - myapp-pod3
  result: pass
  rule: validate-image-tag
userinfo: user_info.yaml
