test/cli/test/admission_user_info_deprecated/user_info.yaml
apiVersion: cli.kyverno.io/v1alpha1
clusterRoles:
- cluster-admin
kind: UserInfo
userInfo:
  username: molybdenum@somecorp.com
